--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.1",
+    "browser-sync": "^2.26.13",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^7.0.2",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.1",
