--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.21.2",
     "datatables.net-dt": "^1.10.23",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
@@ -29,6 +30,7 @@
     "vue-i18n": "^8.22.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.4.8",
+    "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.5.1",
     "vuex-router-sync": "^5.0.0"
   },
