--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-currency-input": "^1.22.4",
     "vue-i18n": "^8.22.1",
     "vue-meta": "^2.4.0",
+    "vue-numeric": "^2.3.0",
     "vue-router": "^3.4.8",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^3.5.1",
