--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vee-validate": "^3.4.5",
     "vform": "^1.0.1",
     "vue": "^2.6.12",
+    "vue-croppa": "^1.3.8",
     "vue-currency-input": "^1.22.4",
     "vue-i18n": "^8.22.1",
     "vue-meta": "^2.4.0",
