--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vform": "^1.0.1",
     "vue": "^2.6.12",
     "vue-croppa": "^1.3.8",
+    "vue-currency-filter": "^5.2.0",
     "vue-currency-input": "^1.22.4",
     "vue-i18n": "^8.22.1",
     "vue-meta": "^2.4.0",
